@@ -1,5 +1,11 @@
 2007-07-25  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-draw-page.c (draw_page_cairo): reverted
+	last change. Instead reimplemented the drawing to fetch the pixels
+	directly into the cairo image surface.
+
+2007-07-25  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/print/print-draw-page.c (draw_page_cairo): push a group
 	around the image surface fills. This seems to get rid of the white
 	stripes in the output.
